Released new version of Amelia: added wiki API, completed uncompleted paths responses description, and added operationId for methods
